--- a/apis/package.json
+++ b/apis/package.json
@@ -1,18 +1,24 @@
 {
-  "name": "apis",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "islam ahmed",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/express": "^4.17.18",
-    "@types/node": "^20.8.4",
-    "express": "^4.18.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
-  }
+    "name": "apis",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "ts-node src/index.ts",
+        "build": "tsc",
+        "serve": "node dist/index.js"
+    },
+    "author": "islam ahmed",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/express": "^4.17.18",
+        "@types/node": "^20.8.4",
+        "express": "^4.18.2",
+        "prisma": "^5.4.2",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.2.2"
+    },
+    "dependencies": {
+        "express-validator": "^7.0.1"
+    }
 }
