--- a/apis/package.json
+++ b/apis/package.json
@@ -19,6 +19,7 @@
         "typescript": "^5.2.2"
     },
     "dependencies": {
+        "@prisma/client": "^5.4.2",
         "express-validator": "^7.0.1"
     }
 }
